@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
+  ORFcor-20130507.ebuild:
+  sci-biology/ORFcor: more cleanup
+
 *ORFcor-20130507 (09 Mar 2015)
 
   09 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
